video tutorial fin de videotutorial 5 activity lifecycle terminaada, falta commentar

--- a/Prueba/AndroidManifest.xml
+++ b/Prueba/AndroidManifest.xml
@@ -20,5 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:label="Lyfe Cycle Test"
+            android:name=".lifeCycleTest"
+            android:configChanges="keyboard|keyboardHidden|orientation">
+        </activity>
     </application>
 </manifest>
